# charred-path

./: Cargo.toml  README.md
examples/: homotopy_word.rs  homotopy_word_debug.rs
src/: lib.rs  main.rs  piecewise_linear.rs
