[package]
name = "charred-path"
version = "0.1.0"
edition = "2021"
description = "Component-based Bevy plugin for tracking path and homotopy data for moving objects"
categories = ["game-development", "mathematics", "science"]
keywords = ["gamedev", "bevy", "ai", "state-machine"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CharredLee/charred-path"

[dependencies]
bevy = "0.13"


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
